# drf-user-report-service

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  justfile  pyproject.toml
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_registered_at.py
config/: env.py  settings.py  urls.py
